Fix layout of video embed on mobile; Allow scrolling page on mobile; Allow accessing game iframe directly on mobile

--- a/css/game.css
+++ b/css/game.css
@@ -3,14 +3,8 @@ body {
   font-size: 30px;
 }
 
-iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
 #game {
-  z-index: 1;
+  width: 100%;
   height: 100%;
   background-color: #fff;
 }
@@ -135,6 +129,7 @@ body.up #up, body.right #right, body.down #down, body.left #left {
 
 #input {
   margin-top: 15px;
+  touch-action: none;
 }
 
 #stack {
@@ -159,6 +154,11 @@ body.up #up, body.right #right, body.down #down, body.left #left {
   line-height: 1.5;
 }
 
+iframe {
+  height: 400px;
+  width: 100%;
+}
+
 @media screen and (min-width: 460px) {
   body {
     display: flex;
@@ -168,7 +168,14 @@ body.up #up, body.right #right, body.down #down, body.left #left {
     background: linear-gradient(to bottom, #555, #333);
   }
 
+  iframe {
+    position: absolute;
+    left: 0;
+    height: 100%;
+  }
+
   #game {
+    z-index: 1;
     width: 460px;
     height: 460px;
     border-radius: 10px;
